# conan

./: README.md
android/ndk/hello/: run_example.py
autotools/c/1/: Makefile.am  run_example.sh
autotools/c/1/src/: soma.c
autotools/c/2/: configure.ac  log  profile.clang  run.sh
autotools/c/3/: Makefile.am  configure.ac  run.sh
autotools/c/3/src/: Makefile.am
autotools/c/clang/: log  run.sh
autotools/c/clang/src/: main.c
autotools/c/gtk/1/: Makefile.am  configure.ac  run_example.sh
autotools/c/gtk/2/: CMakeLists.txt  Makefile.am  conanfile.txt  configure.ac  run_example.sh
autotools/c/gtk/2/src/: main.c
autotools/c/ndk/: log  run.sh
autotools/c/staticlib/2/: configure.ac
autotools/c/staticlib/libtools/: run.sh
autotools/c/staticlib/libtools/app/: conanfile.txt
autotools/c/staticlib/libtools/lib/: configure.ac  run.sh
autotools/c/staticlib/libtools/lib/1/: Makefile.am  log
autotools/c/staticlib/libtools/lib/1/lib/: soma.h
autotools/c/staticlib/libtools/lib/1/src/: Makefile.am
autotools/c/staticlib/libtools/lib/2/: Makefile.am  configure.ac  run.sh
autotools/c/staticlib/libtools/lib/2/src/: Makefile.am
autotools/c/staticlib/libtools/lib/3/: Makefile.am  autogen.sh  configure.ac  log2  run.sh  somalib.pc.in
autotools/c/staticlib/libtools/lib/3/src/: Makefile.am
autotools/c/staticlib/libtools/lib/lib/: Makefile.am
autotools/c/staticlib/ranlib/src/: Makefile.am
cmake/c/1/src/: main.c
cmake/c/clang/: CMakeLists.txt  README.md  run.sh
cmake/c/clang/src/: main.c
cmake/c/gcc/: README.md  run.sh
cmake/c/gtk/1/: CMakeLists.txt  README.md  conanfile.txt
cmake/c/gtk/system/: conanfile.txt  run_example.sh
cmake/c/ndk/: README.md  run.sh
cmake/cpp/gtk/1/: CMakeLists.txt
cmake/cpp/gtk/gtkmm/3.0/1/: main.cpp
meson/c/1/: run.sh
projetos/1/: README.md
projetos/examples/libraries/imgui/introduction/: test
